# django-mds

./: .dockerignore  .env.example  .gitignore  .travis.yaml  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  manage.py  prerelease_script.py  setup.cfg
docs/: how-to-test-a-provider-implementation.md
front/: .env  .env.development  README.md  package-lock.json  package.json  tslint.json
front/public/: index.html  manifest.json
front/src/: App.tsx  index.css  settings.tsx
front/src/AreasSetup/: index.tsx
front/src/AssetsViewer/: Viewer.tsx  index.tsx  positionInUrl.test.tsx  positionInUrl.tsx
front/src/Map/: Map.tsx  index.tsx
front/src/PositionAwareApp/: index.tsx
front/src/PositionAwareApp/AreasSetup/: AreaConfig.tsx  index.tsx
front/src/PositionAwareApp/AssetsViewer/: VehicleDetail.tsx  index.tsx
front/src/PositionAwareApp/Menu/: index.tsx
front/src/PositionAwareApp/commons/: IPositionRouteProps.tsx
front/src/api/: areas.ts  commons.ts  vehicles.ts
front/src/commons/: ILatLng.tsx  NoMatch.tsx
mds/: admin.py  apps.py  conf.py  db_helpers.py  enums.py  factories.py  models.py  oas.yml  provider_mapping.py  serializers.py  urls.py  utils.py  views.py
mds-server/: settings.py  wsgi.py
mds/access_control/: auth_means.py  authenticate.py  jwt_decode.py  permissions.py  scopes.py  stateless_jwt.py
mds/apis/: schema.py  utils.py
mds/apis/agency_api/v0_3/: policies.py  urls.py  vehicles.py
mds/apis/agency_api/v0_4/: urls.py  utils.py  vehicles.py
mds/apis/agency_api/v0_x/: __init__.py  compliance.py  compliances.py  geographies.py  (+4 more)
mds/apis/prv_api/: authent.py  event_records.py  provider_api.py  providers.py  service_areas.py  urls.py  vehicles.py
mds/authent/: apps.py  conf.py  generators.py  models.py  oauth2_provider_apps.py  oauthlib_utils.py  public_api.py  settings.py  urls.py  views.py
mds/authent/migrations/: 0001_initial.py  0001_squashed_0007_post_make_application_user_scope_blankable.py  0002_auto_20190124_0928.py  0003_auto_20190903_1529.py  0003_auto_20190919_1221.py  0003_pre_add_aggregator_for_application.py  0004_post_fill_default_aggregator_for.py  0005_pre_add_scope_restrictions_for_application_users.py  0006_post_fill_allowed_scopes_with_default_values.py  0007_post_make_application_user_scope_blankable.py
mds/fixtures/: ladot.yaml
mds/management/commands/: genfixture.py  poll_providers.py
mds/migrations/: 0001_initial.py  0001_squashed_0059_post_policy_config_encoder.py  0002_area_color.py  0002_pre_compliance_extra.py  0002_update_area_polygons.py  0003_post_index_device_events.py  0003_provider_logo_b64.py  0003_record_timestamp.py  0004_eventrecord_point.py  0005_auto_20190122_1300.py  0006_provider_device_category.py  0007_provider_api.py  0008_provider_authentication.py  0009_provider_agency_api_authentication.py  0010_device_dn_battery_pct.py  0011_added_index_to_polygon_and_area_models.py  0012_update_to_mds_0_3_0.py  0013_provider_last_start_time_polled.py  0014_non_null_labels.py  0015_null_dn_status.py  0016_agency_api_configuration.py  0017_change_bike_to_bicycle_in_choices_field.py  0018_allow_blank_provider_base_api_url.py  0019_delete_creation_deletion_date_fields_in_area_and_polygon.py  0020_fields_consistency.py  0021_rename_event_source.py  0022_provider_colors.py  0022_relabel_api_fields.py  0023_provider_colors.py  0023_relabel_api_fields.py  0024_provider_device_category_deprecation.py  0025_remove_provider_device_category.py  0026_alter_polygon_to_multipolygon.py  0027_eventrecord_first_saved_at.py  0028_eventrecord_saved_at_index.py  0028_pre_provider_operator.py  0029_post_provider_operator_fill.py  0029_provider_operator.py  0030_post_provider_operator_default.py  0030_provider_operator_fill.py  (+34 more)
mds/provider_api/: translation.py
mds/provider_poller/: oauth2_store.py  poller.py  settings.py  translation.py
mds/provider_poller/poller/: translation.py  v0_2.py  v0_3.py  v0_4.py
mds/server/: settings.py  wsgi.py
mds/templates/: swagger.html
mds_server/: settings.py  wsgi.py
midas/: admin.py  apps.py  factories.py  manage.py  models.py  oas.yml  serializers.py  settings.py  urls.py  views.py  wsgi.py
midas-server/: settings.py  wsgi.py
midas/fixtures/: ladot.yaml
midas/management/commands/: genfixture.py
midas/migrations/: 0001_initial.py
tests/: auth_helper.py  auth_helpers.py  conftest.py  test_areas.py  test_basic.py  test_db_helpers.py  test_dbsetup.py  test_devices.py  test_models.py  test_provider.py  test_provider_mapping.py
tests/access_control/: test_jwt_decode.py
tests/apis/: test_utils.py
tests/apis/prv_api/: test_authent.py  test_event_records.py  test_providers.py  test_service_areas.py  test_status_changes.py  test_vehicles.py
tests/authent/: test_tokens.py
tests/authentication/: test_jwt_decode.py
tests/management/commands/: test_poll_providers.py  test_poll_providers_v0_3.py  test_poll_providers_v0_4.py  utils.py
tests/migrations/: test_0041_map_old_to_new_event_records.py
tests/project/: settings.py  wsgi.py
(+21 files in other folders)
