[metadata]
name = django-mds
version = 0.5.2.dev0
author = Polyconseil
author_email = opensource+django-mds@polyconseil.fr
url = http://github.com/Polyconseil/django-mds
description = MDS Agency implementation
long_description = file: README.md
long_description_content_type= text/markdown
license = MIT
keywords = Mobility City MDS MaaS Django
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Other Audience
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Environment :: Web Environment
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Other/Nonlisted Topic
    Framework :: Django

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    setuptools
install_requires =
    coreapi
    django
    django-filter
    django-cors-headers
    django-oauth-toolkit
    djangorestframework
    drf-yasg
    getconf
    psycopg2-binary
    pyyaml
    pyjwt
    cryptography
    requests_oauthlib

[options.entry_points]
console_scripts =
    mds-server = mds.server.wsgi:application

[options.extras_require]
dev =
    black
    factory-boy
    flake8
    pytest
    pytest-django
    requests-mock
    zest.releaser[recommended]
    polydev.github

[options.packages.find]
exclude =
    tests

[flake8]
exclude = build, dist
ignore = E203, E501, W503

[bdist_wheel]
python-tag = py3

[zest.releaser]
create-wheel = yes
version-levels = 3

[distutils]
index-servers = pypi
